--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,9 +14,9 @@ android {
                 cppFlags "-std=c++11", "-frtti", "-fexceptions"
             }
         }
-//        ndk{
-//            abiFilters 'arm64-v8a'
-//        }
+        ndk{
+            abiFilters 'arm64-v8a'
+        }
     }
     buildTypes {
         release {
